--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,13 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/register">Register<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/login">login</a>
-        <a class="nav-item nav-link" href="/logout">logout</a>
-      </div>
-    </div>
+
+    {% if session['username'] %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/dashboard">dashboard</a>
+            <a class="nav-item nav-link" href="/issues">issues</a>
+            <a class="nav-item nav-link" href="/add">add parts/tests</a>
+            <a class="nav-item nav-link" href="/logout">logout</a>
+          </div>
+        </div>
+    <p>currently logged in as {{session['username']}}</p>
+    {% else %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/register">Register<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/login">login</a>
+            <a class="nav-item nav-link" href="/logout">logout</a>
+          </div>
+        </div>
+      <p>not logged in</p>
+    {% endif %}
   </nav>
