adding forms for tests, issues

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -9,7 +9,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/dashboard">dashboard</a>
             <a class="nav-item nav-link" href="/issues">issues</a>
-            <a class="nav-item nav-link" href="/add">add parts/tests</a>
+            <a class="nav-item nav-link" href="/users/{{session['username']}}/tests/add">add parts/tests</a>
             <a class="nav-item nav-link" href="/logout">logout</a>
           </div>
         </div>
