trying to add date to test model

--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -6,4 +6,9 @@
 
 {% block body %}
     <h1>Hello these are the current tests</h1>
+
+    {% for test in tests %}
+        <p>{{test}}</p>
+    {% endfor %}
+
 {% endblock body %}
