computed and added future date to tests

--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -14,6 +14,7 @@
           <h6 class="card-subtitle mb-2 text-muted">{{test.location}}</h6>
           <h6 class="card-subtitle mb-2 text-muted">{{test.duration}} hours</h6>
           <h6 class="card-subtitle mb-2 text-muted">Start date: {{test.start}}</h6>
+          <h6 class="card-subtitle mb-2 text-muted">End date: {{test.end}}</h6>
           <p class="card-text">{{test.lot_num}}</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
