i forgot what I added, just updating the repo with uncommitted code

--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -16,8 +16,9 @@
           <h6 class="card-subtitle mb-2 text-muted">Start date: {{test.start}}</h6>
           <h6 class="card-subtitle mb-2 text-muted">End date: {{test.end}}</h6>
           <p class="card-text">{{test.lot_num}}</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="#" class="btn btn-primary">Edit Test</a>
+          <a href="#" class="btn btn-danger">Delete Test</a>
+          
         </div>
       </div>
     {% endfor %}
