--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -17,7 +17,7 @@
           <h6 class="card-subtitle mb-2 text-muted">End date: {{test.end}}</h6>
           <p class="card-text">{{test.lot_num}}</p>
           <a href="#" class="btn btn-primary">Edit Test</a>
-          <a href="#" class="btn btn-danger">Delete Test</a>
+          <a href="/users/tests/{{test.id}}/delete" class="btn btn-danger">Delete Test</a>
           
         </div>
       </div>
