--- a/templates/all_issues.html
+++ b/templates/all_issues.html
@@ -17,7 +17,7 @@
       <p class="card-text">{{issue.text}}</p>
         {% if session['username'] == issue.username %}
         <a href="#" class="btn btn-primary">Edit Issue</a>
-        <a href="#" class="btn btn-danger">Delete Issue</a>
+        <a href="/users/{{session['username']}}/issues/{{issue.id}}/delete" class="btn btn-danger">Delete Issue</a>
         
         {% else %}
         <a href="#" class="btn btn-warning">Add comment</a>
