figured out date stuff. needed to sort by date, including the name of the day

--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -14,7 +14,7 @@
           <h6 class="card-subtitle mb-2 text-muted">{{test.location}}</h6>
           <h6 class="card-subtitle mb-2 text-muted">{{test.duration}} hours</h6>
           <h6 class="card-subtitle mb-2 text-muted">Start date: {{test.start}}</h6>
-          <h6 class="card-subtitle mb-2 text-muted">End date: {{test.end}}</h6>
+          <h6 class="card-subtitle mb-2 text-muted">End date: {{test.endday}} {{test.end}}</h6>
           <p class="card-text">{{test.lot_num}}</p>
           <a href="#" class="btn btn-primary">Edit Test</a>
           <a href="/users/tests/{{test.id}}/delete" class="btn btn-danger">Delete Test</a>
