--- a/templates/all_issues.html
+++ b/templates/all_issues.html
@@ -18,10 +18,10 @@
       {% if session['username'] == issue.username %}
       <a href="#" class="btn btn-primary mb-2">Edit Issue</a>
       <a href="/users/{{session['username']}}/issues/{{issue.id}}/delete" class="btn btn-danger mb-2">Delete Issue</a>
+      <a href="/users/{{session['username']}}/issues/{{issue.id}}/comment" class="btn btn-info mb-2">Add comment</a>
       
       {% else %}
-      <a href="#" class="btn btn-warning">Add comment</a>
-      <a href="#" class="btn btn-primary">View full text</a>
+      <a href="/users/{{session['username']}}/issues/{{issue.id}}/comment" class="btn btn-info mb-2">Add comment</a>
       
       {% endif %}
       <input type="checkbox" checked data-toggle="toggle" data-style="mt-1" data-on="Issue<br>Unsolved!" data-off="Issue<br>Solved!" data-onstyle="danger" data-offstyle="success">
