--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -35,9 +35,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/logout">logout</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="/change_password">change password</a>
-                  </li>
+                  </li> -->
                 </ul>
                 <span class="navbar-text">
                   currently logged in as {{session['username']}} 
