--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
     <!-- https://gitbrent.github.io/bootstrap4-toggle/ -->
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
     
+    <!-- https://www.bootstraptoggle.com/ -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+
+
     <link rel="stylesheet" href="/static/styles.css">
 
 
@@ -49,6 +53,9 @@
 
         <!-- https://gitbrent.github.io/bootstrap4-toggle/ -->
         <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+
+        <!-- https://www.bootstraptoggle.com/ -->
+        <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
