--- a/templates/issue_archive.html
+++ b/templates/issue_archive.html
@@ -12,8 +12,8 @@
               {% if session['username'] == issue.username %}
               <a href="#" class="btn btn-primary mb-2">Edit Issue</a>
               <a href="/users/{{session['username']}}/issues/{{issue.id}}/delete" class="btn btn-danger mb-2">Delete Issue</a>
-              <form action="/users/{{session['username']}}/{{issue.id}}/add_to_archive">
-                <button class="btn btn-danger mb-2">Archive Issue</button>
+              <form action="/users/{{session['username']}}/{{issue.id}}/move_out_from_archive">
+                <button class="btn btn-danger mb-2">Move back to active issues</button>
               </form>
               
                 {% else %}
