--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -19,7 +19,7 @@
                   <p class="card-text">{{test.lot_num}}</p>
                   <a href="#" class="btn btn-primary">Edit Test</a>
                   <a href="/users/tests/{{test.id}}/delete" class="btn btn-danger">Delete Test</a>
-                  <form action="/users/{{session['username']}}/{{test.id}}/add_to_archive">
+                  <form action="/farts">
                     <button class="btn btn-info mb-2 mt-1">Archive test</button>
                   </form>
                   
