--- a/templates/test_archive.html
+++ b/templates/test_archive.html
@@ -13,8 +13,8 @@
         <h6 class="card-subtitle mb-2 text-muted">End date: {{test.endday}} {{test.end}}</h6>
         <p class="card-text">{{test.lot_num}}</p>
         <a href="#" class="btn btn-primary">Edit Test</a>
-        <a href="/users/tests/{{test.id}}/delete" class="btn btn-danger">Delete Test</a>
-        <form action="/users/{{session['username']}}/{{test.id}}/move_out_from_archive">
+        <a href="/users/{{session['username']}}/tests/{{test.id}}/delete" class="btn btn-danger">Delete Test</a>
+        <form action="/users/{{session['username']}}/tests/{{test.id}}/move_out_from_archive">
           <button class="btn btn-info mb-2 mt-1">Move back to active tests</button>
         </form>
   </div>
