started branch to implement a sorting feature for tests/issue

--- a/templates/issue_archive.html
+++ b/templates/issue_archive.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
+    <h1>The Issue Archive</h1>
+    <p>Implement a sorting function here. (i.e. sort by user, date, etc)</p>
     {% for issue in issues %}
         {% if issue.archived == '1' %}
         <div class="card" style="width: 18rem;">
