--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/logout">logout</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/change_password">change password</a>
+                    <a class="nav-link" href="users/{{session['username']}}/change_password">change password</a>
                   </li>
                 </ul>
                 <span class="navbar-text">
