tried to use a package, didnt want to wrestle with it. trying a corey shafer tutorial next

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1>change your password</h1>
-{% include '/includes/forms/_changePasswordForm.html'   %}    
 
-
+    <h1>Test Change Password</h1>
+    {{ password_template|safe }}
 {% endblock body %}
