--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -3,5 +3,5 @@
 {% block body %}
 
     <h1>Test Change Password</h1>
-    {{ password_template|safe }}
+    {% include '/includes/forms/_changePasswordForm.html'   %}
 {% endblock body %}
