added headers and whatnot

--- a/templates/add_issue.html
+++ b/templates/add_issue.html
@@ -1,7 +1,7 @@
 {% include 'base.html'   %}
 
 {% block title %}
-    <title>Let's add an issue</title>
+    <title>Add issues!</title>
 {% endblock title %}
 
 {% block body %}
