--- a/templates/all_issues.html
+++ b/templates/all_issues.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block body %}
-<h1>Hello these are the current issues</h1>
+<h1>These are the current issues</h1>
 
 
 {% for issue in issues %}
