--- a/templates/all_tests.html
+++ b/templates/all_tests.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block body %}
-    <h1>Hello these are the current tests</h1>
+    <h1>These are the current tests</h1>
 
     {% for test in tests %}
           {% if test.archived == '0' %}
