--- a/templates/test_archive.html
+++ b/templates/test_archive.html
@@ -2,6 +2,7 @@
 
 
 {% block body %}
+<h1>Welcome to the test archive</h1>
   {% for test in tests %}
     {% if test.archived == '1' %}
     <div class="card" style="width: 18rem;">
