--- a/templates/add_test.html
+++ b/templates/add_test.html
@@ -1,11 +1,11 @@
 {% include 'base.html'   %}
 
 {% block title %}
-    <title>Let's add some parts or tests or something</title>
+    <title>Add tests!</title>
 {% endblock title %}
 
 {% block body %}
-    <h1>Add parts!</h1>
+    <h1>Add parts and/or tests!</h1>
 
     {% include 'includes/forms/_testForm.html'   %}
 {% endblock body %}
