trying to add messages. need to go back and add g

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -29,6 +29,10 @@
                       <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/users/{{session['username']}}/tests/archive">View test archive</a>
                       </li>
+
+                      <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="/users/{{session['username']}}/messages">View my messages</a>
+                      </div>
                     </div>
                   </li>
                   
