working on messages

--- a/templates/issue_archive.html
+++ b/templates/issue_archive.html
@@ -11,10 +11,10 @@
               <h6 class="card-subtitle mb-2 text-muted">Author: {{issue.username}}</h6>
               <h6 class="card-subtitle mb-2 text-muted">{{issue.date}}</h6>
               <p class="card-text">{{issue.text}}</p>
-              {% if session['username'] == issue.username %}
+              {% if g.user.username == issue.username %}
               <a href="#" class="btn btn-primary mb-2">Edit Issue</a>
-              <a href="/users/{{session['username']}}/issues/{{issue.id}}/delete" class="btn btn-danger mb-2">Delete Issue</a>
-              <form action="/users/{{session['username']}}/issues/{{issue.id}}/move_out_from_archive">
+              <a href="/users/{{g.user.username}}/issues/{{issue.id}}/delete" class="btn btn-danger mb-2">Delete Issue</a>
+              <form action="/users/{{g.user.username}}/issues/{{issue.id}}/move_out_from_archive">
                 <button class="btn btn-info mb-2">Move back to active issues</button>
               </form>
               
