--- a/templates/all_issues.html
+++ b/templates/all_issues.html
@@ -17,7 +17,7 @@
     <h6 class="card-subtitle mb-2 text-muted">Author: {{issue.username}}</h6>
     <h6 class="card-subtitle mb-2 text-muted">{{issue.date}}</h6>
     <p class="card-text">{{issue.text}}</p>
-    {% if session['username'] == issue.username %}
+    {% if g.user.username == issue.username %}
     <a href="#" class="btn btn-primary mb-2">Edit Issue</a>
     <a href="/users/{{session['username']}}/issues/{{issue.id}}/delete" class="btn btn-danger mb-2">Delete Issue</a>
     <form action="/users/{{session['username']}}/issues/{{issue.id}}/add_to_archive">
