can now send/receive messages

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -33,6 +33,9 @@
                       <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/users/{{g.user.id}}/messages">View my messages</a>
                       </div>
+                      <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="/users/all">View all users</a>
+                      </div>
                     </div>
                   </li>
                   
@@ -47,7 +50,7 @@
                     <a class="nav-link" href="/change_password">change password</a>
                   </li> -->
                   <span class="navbar-text">
-                    currently logged in as {{g.user.id}} 
+                    currently logged in as {{g.user.username}} 
                   </span>
               </div>
             </nav>
